[package]
name = "catan"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
# futures-util = "0.3.31"
http = "1.1.0"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
# https = "2.1.0"
# tokio = { version = "1.41.0", features = ["full"] }
# tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
